--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,23 @@
 [package]
-name = "source_file"
+name = "FaksLife"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdl2 = "0.37.0"
+bincode = "2.0.1"
+fnv = "1.0.7"
+rand = "0.9.0"
+sdl_image = "0.3.8"
+serde_derive = "1.0.218"
+serde_json = "1.0.140"
+image = "0.25.5"
+
+[dependencies.sdl2]
+version = "0.37.0"
+default-features = false
+#features = ["image","ttf","mixer"]
+#features = ["ttf","image","gfx","mixer"]
+
+[dependencies.serde]
+version = "1.0.218"
+features = ["derive"]
