--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,13 @@ crate-type = ["cdylib"]
 rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
 
 [dependencies]
-rand = "0.9.1"
 image = "0.25.5"
-sauron = "0.70.0"
+
+
 log = "0.4"
 console_log = "1"
 console_error_panic_hook = "0.1"
-getrandom = { version = "0.3", features = ["wasm_js"] }
+sauron = "0.70.0"
+wasm-bindgen = "0.2"
+getrandom = { version = "0.2.12", features = ["js"] }
+
