podlaga za zacetni zaslon

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ console_log = "1"
 console_error_panic_hook = "0.1"
 sauron = "0.70.0"
 wasm-bindgen = "0.2"
-getrandom = { version = "0.2.12", features = ["js"] }
+getrandom = { version = "0.2.15", features = ["js"] }
 wasm-timer = "0.2.5"
+gloo-timers = { version = "0.2", features = ["future"] }
+
 
